Fix: Updated line wrap and SEO fixes

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -18,3 +18,16 @@ body {
 button {
   cursor: pointer;
 }
+
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--background);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--primary);
+  border-radius: 100rem;
+}
